--- a/myresume/resume/education.tex
+++ b/myresume/resume/education.tex
@@ -10,16 +10,42 @@
 \begin{cventries}
 
 %---------------------------------------------------------
+
+ \cventry
+    {Project Management Certification} % Degree
+    {UCLA Extension, Los Angeles} % Institution
+    {Los Angeles, CA USA} % Location
+    {2019} % Date(s)
+    {}
+
+
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      \end{cvitems}
-    }
+    {M.S. in Computer Science (GPA 3.8)} % Degree
+    {University of California, Los Angeles} % Institution
+    {Los Angeles, CA USA} % Location
+    {2004} % Date(s)
+    {}
+
+   \cventry
+    {M.S. in Physics (GPA 3.8)} % Degree
+    {University of California, Los Angeles} % Institution
+    {Los Angeles, CA USA} % Location
+    {2001} % Date(s)
+    {}	
+	
+%	\cventry
+%    {M.S. in Physics (GPA 3.8)} % Degree
+%    {Chinese University of Hong Kong} % Institution
+%    {Hong Kong, Hong Kong} % Location
+%    {1997} % Date(s)
+%    {}	
+
+%	\cventry
+%    {B.S. in Physics (GPA 3.7)} % Degree
+%    {Chinese University of Hong Kong} % Institution
+%    {Hong Kong, Hong Kong} % Location
+%    {1995} % Date(s)
+%    {}	
 
 %---------------------------------------------------------
 \end{cventries}
