--- a/myresume/resume/experience.tex
+++ b/myresume/resume/experience.tex
@@ -1,3 +1,4 @@
+
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
@@ -10,93 +11,95 @@
 \begin{cventries}
 
 %---------------------------------------------------------
+
+	
   \cventry
-    {Software Architect} % Job title
-    {Omnious. Co., Ltd.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jun. 2017 - May. 2018} % Date(s)
+    {Programmer/Analyst IV} % Job title
+    {Department of Radiological Sciences, UCLA} % Organization
+    {Los Angeles, CA USA} % Location
+    {Aug 2018 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
-        \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
-        \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
-        \item {Implemented several API microservices in Node.js Koa and in the serverless AWS Lambda functions.}
-        \item {Deployed a centralized logging environment(ELK, Filebeat, CloudWatch, S3) which gather log data from docker containers and AWS resources.}
-        \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
+        \item[] { {\bf System Architect and Technical Lead}
+            \begin{itemize} % Description(s) of tasks/responsibilities
+                \item {Provide technical leadership to two large scale projects}
+                \item {Design system architecture Design for next generation of Faculty academic productivity metrics application(aRVU) using latest services based architecture to improve agility and performance. The application is implemented using REST API backend with Java/Grail environment and Spring Framework and Single Page Application Frontend with JavaScript/Typescript environment and Angular 7 framework}
+                \item {Establish implementation and release plan to enable rapid development cycle, improve adaptation to requirements changes and increase development velocity with closed development tickets increased from 116 in 2019 to 329 in 2020.}
+                \item {Collaborate with UCLA Health IT system operation team using Puppet to provision both development and production environment to ensure stability of the application}
+                \item {Integrate various UCLA campus-wide Systems and Databases, including AD authentication through OKTA, Class schedules (SAIT) through Google Apigee Platform and other data sources though REST APIs}
+              \end{itemize}}
+        \item[] { {\bf Technical Mentorship and Project Management} 
+            \begin{itemize} % Description(s) of tasks/responsibilities
+                \item {Mentor and delegate work assignments to a Programmer/Analyst III}
+                \item {Provide project management expertise and set up team project management environment using GitLab platform to promote collaboration and improve team communication}
+              \end{itemize}}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
+
   \cventry
-    {Co-founder \& Software Engineer} % Job title
-    {PLAT Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jan. 2016 - Jun. 2017} % Date(s)
+    {Programmer/Analyst III} % Job title
+    {Department of Radiological Sciences, UCLA} % Organization
+    {Los Angeles, CA USA} % Location
+    {Dec 2015 - Aug 2018} % Date(s)
+    {
+       \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item[] { {\bf Academic Relative Value Unit (aRVU) Initiative} 
+            \begin{itemize} % Description(s) of tasks/responsibilities
+                \item {Designed and developed aRVU Application to generate academic performance metrics of 100 faculties in Radiology Department to support academic personnel decisions like bonuses and promotions using Java/Grails environment with Spring Framework}
+                \item {Integrated multiple internal and external data sources with automation to eliminate human data entry error}
+                \item {Created user-friendly UI for more than 100 faculties, administrative assistants, fund managers, clinical trials study coordinators and department executives to enhance data accuracy and efficiency}
+                \item {Application showcase in multiple cross-UC conferences to highlight usage of aRVU}
+              \end{itemize}}
+        \item[] {  {\bf Research Imaging Service (RIS) Application}  
+            \begin{itemize} % Description(s) of tasks/responsibilities
+                \item {Designed and developed Web-based Application to handle clinical trials requests from at least 60 departments within UCLA to the Radiology Department using PHP/MySql environment with Laravel Framework}
+                \item {The application is known as the golden standard for clinical trial management system in usability and functionality}
+              \end{itemize}}
+      \end{cvitems}
+    }
+	
+  \cventry
+    {Programmer/Analyst III} % Job title
+    {School of Engineering Distance Learning Network, USC} % Organization
+    {Los Angeles, CA USA} % Location
+    {Dec 2012 - Dec 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
+        \item {Collaborated with a team of developers to design and develop online learning environment and supporting tools using PHP with Oracle backend}
+        \item {Designed and developed internal administration tools to support students, faculty and administrators  in the remote learning environment}       
       \end{cvitems}
     }
 
-%---------------------------------------------------------
   \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Apr. 2016} % Date(s)
+    {Sr. Information Technology Specialist} % Job title
+    {Department of Medicine, UCLA Medical Center} % Organization
+    {Los Angeles, CA USA} % Location
+    {Sep 2009 - Dec 2012} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-        \item {Implemented a distributed web stress test tool with high anonymity.}
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
+        \item {Designed and developed patient medical records and data collection system for the Dept. of Medicine (DOM) outpatient program, as well as the hospital's internal medicine and urgent care facilities}
+        \item {Managed all web-based systems for DOM Education Office to meet various departmental needs}      
+		 \item {Designed and developed a web-based, HIPPA compliant physician note system that readily permits exchange of information between primary physicians, consultants and other care providers, as well as rapid recoding of necessary data for record-keeping} 
+		 \item{Supported, maintained and expanded existing medical reminder system to tract therapies, needed diagnostic studies, follow-ups, appointment, etc. for monitoring of patient's care processes}  
+		 \item{Created and developed a secure online patient-physician email based corresponding and prescription system}
+		 \item{Performed ongoing project development and site maintenance functions for various DOM websites}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
+ \cventry
+    {Programmer/Analyst II} % Job title
+    {Department of Medicine, UCLA Medical Center} % Organization
+    {Los Angeles, CA USA} % Location
+    {Jun 2003 - Sep 2009} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
-        \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
+        \item {Designed, developed and maintained Web solution for the Department of Medicine}
+		 \item {Developed Enterprise Patient Record and Preventive Screening Reminder (Expert) System (Outpatient Signout) with connection to UCLAHealth MCCS Patient Records web services}
+		   \item {Constructed multi-hosts testing environment using SME server (customized Red Hat 7.3 Linux server)}
+		   \item {Developed and maintained various websites in the Department of Medicine including Office of Research Administration Website}
       \end{cvitems}
     }
 
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer.}
-        \item {Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-      \end{cvitems}
-    }
 
-%---------------------------------------------------------
-  \cventry
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-        \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      \end{cvitems}
-      %\begin{cvsubentries}
-      %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-      %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      %\end{cvsubentries}
-    }
-
-%---------------------------------------------------------
 \end{cventries}
