--- a/myresume/resume/summary.tex
+++ b/myresume/resume/summary.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Summary}
+\cvsection{Professional Summary}
 
 
 %-------------------------------------------------------------------------------
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Site Reliability Engineer at start-up company Kasa. 7+ years experience specializing in the backend development, infrastructure automation, and computer hacking/security. Super nerd who loves Vim, Linux and OS X and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
+Web Application Developer with 15 years of experience designing and implementing solutions in the health care industry. Brings strong expertise in various application platforms, design patterns and development paradigms. Committed to following industry best practices, maintaining customers' focus, and establishing long-term maintainability of the products. Known for developing exceptional applications from beginning to end.
 \end{cvparagraph}
